# memoric

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  privileged-integration.yml
.workflow/design/: maestro-memoric-backlog-extension-2026-05-22.md  maestro-memoric-iteration-backlog-2026-05-21.md  task-progress-2026-05-22.json
.workflow/learning/: follow-memoric-2026-05-21.md  lessons.jsonl
docs/: architecture.md  compatibility.md  invocation-contract.md  safety-model.md  server-manifest.json  streamable-http-adapter.md  tool-catalog.json  tool-reference.md  troubleshooting.md
driver/: DRIVER_MANUAL.md  README.md  build.bat  build_temp.bat  load.bat  memoric.c  memoric.h  memoric.ps1
examples/: benign_test_target.rs  driver_test.rs
scripts/: generate_tool_catalog.py
src/: args.rs  artifact.rs  audit.rs  byovd.rs  bypass_db.rs  capability.rs  driver.rs  elevation.rs  error.rs  evasion.rs  inject.rs  kernel.rs  kernel_offsets.rs  main.rs  observability.rs  opsec_cleanup.rs  policy.rs  proxy.rs  redaction.rs  redteam.rs  runtime.rs  safe_handle.rs  state.rs  stdio_server.rs  util.rs  worker.rs
src/bruteforce/: anti_forensics.rs  kernel_rw.rs  mod.rs  page_table.rs  physical_memory.rs  self_protect.rs  sniffing.rs
src/crypto/: aes.rs
src/evasion/: amsi.rs  antivm.rs  callback_ops.rs  cfg.rs  defender.rs  doppel.rs  edr.rs  etw.rs  firewall.rs  fluctuation.rs  gargoyle.rs  ghost.rs  herpaderp.rs  hwbp.rs  hypervisor.rs  ppid.rs  retspoof.rs  sentinel.rs  sleep.rs  stealth_score.rs  syscall.rs  sysmon.rs  testsign.rs  timestomp.rs  unhook.rs  unlink.rs  wdac.rs
src/info/: environment.rs  handles.rs  kerberos.rs  memory.rs  mod.rs  module.rs  process.rs  sam.rs  thread.rs  window.rs
src/inject/: callback.rs  dll.rs  earlybird.rs  hollow.rs  hook.rs  obfuscate.rs  phantom.rs  poolparty.rs  shellcode.rs  stomping.rs  thread.rs  (+3 more)
tests/: stdio_subprocess.rs
(+62 files in other folders)
