[package]
name = "memoric"
version = "0.1.0"
edition = "2021"
description = "A red team memory weapon MCP Server for Windows"
authors = ["memoric contributors"]
license = "MIT"

[dependencies]
# MCP SDK - will be added later when available
# For now, we implement JSON-RPC manually

# Windows API
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_Security_Authentication",
    "Win32_Security_Authentication_Identity",
    "Win32_System_ProcessStatus",
    "Win32_System_WindowsProgramming",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_Ioctl",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_EventLog",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Kernel",
    "Win32_Security_Authorization",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_System_Services",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_DataExchange",
] }
ntapi = "0.4"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
once_cell = "1.19"
lazy_static = "1.5"
chrono = "0.4"
hex = "0.4"
fastrand = "2.0"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
strip = true
